--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 name: "สภาโสตทัศน์", icon: "fa-camera-retro", head: "นางสาววิไลลักษณ์ ถุงแก้ว", head_img: "",
                 members: [
                     {n: "นายธีรศิลป์ คัณทักษ์", img: "https://i.postimg.cc/HsyXCG6H/1000002246-removebg-preview.png"}, 
-                    {n: "นางสาวสุดารัตน์ ลวดอุปโป"}, {n: "นางสาวดวงพร เคนตานนท์"}, {n: "นางสาวปนัดดา บุตรแก้ว"}, {n: "นางสาวศิริพร หีบแก้ว"}, {n: "นางสาวปวริศา โคตรภักดี"}, {n: "นางสาววริษฐา จารัตน์"}
+                    {n: "นางสาวสุดารัตน์ ลวดอุปโป"}, {n: "นางสาวดวงพร เคนตานนท์"}, {n: "นางสาวปนัดดา บุตรแก้ว"}, {n: "นางสาวศิริพร หีบแก้ว"}, {n: "นางสาวปวริศา โคตรภักดี"}, {n: "นางสาวรวิษฎา จารัตน์"}
                 ]
             },
             {
@@ -220,7 +220,7 @@
             {
                 name: "สภาปฏิคม", icon: "fa-handshake", head: "นางสาวสุนันทา พลยุทธ", 
                 head_img: "https://i.postimg.cc/Hs9WMBxy/1000007885-removebg-preview.png",
-                members: [{n: "นางสาวนันทพร ทวงษ์ศรี"}, {n: "นางสาวจีรชญา สุโพธิ์"}, {n: "นางสาวฟิณณิตา ทศชา"}, {n: "นางสาวนารีรัตน์ รักษาภักดี"}, {n: "นางสาวทอฝัน สุขรักษา"}, {n: "นางสาวอารยา ศรีจันทร์", img: "https://i.postimg.cc/8cVJpcyq/1000007892-removebg-preview.png"}]
+                members: [{n: "นางสาวนันทพร ทวงษ์ศรี"}, {n: "นางสาวจีรชญา สุโพธิ์"}, {n: "นางสาวฟิณณิตา ทศชา"}, {n: "นางสาวนารีรัตน์ รักษาภักดี"}, {n: "นางสาวทอฝัน สุขรักษา"}, {n: "นางสาวอารีญา ศรีจันทร์", img: "https://i.postimg.cc/8cVJpcyq/1000007892-removebg-preview.png"}]
             },
             {
                 name: "สภาเหรัญญิก", icon: "fa-wallet", head: "นางสาวธัญลักษณ์ อินพิมพ์", head_img: "",
