--- a/index.html
+++ b/index.html
@@ -49,13 +49,11 @@
                     <div class="w-16 h-16 glass rounded-2xl flex items-center justify-center text-3xl group-hover:bg-red-600 transition duration-300">
                         <i class="fa-brands fa-instagram text-white"></i>
                     </div>
-                    <span class="text-xs mt-2 text-gray-400 font-light">Instagram</span>
                 </a>
                 <a href="https://www.tiktok.com/@pakstudentsvoice?_r=1&_t=ZS-93aAuogos5q" target="_blank" class="flex flex-col items-center group">
                     <div class="w-16 h-16 glass rounded-2xl flex items-center justify-center text-3xl group-hover:bg-red-600 transition duration-300">
                         <i class="fa-brands fa-tiktok text-white"></i>
                     </div>
-                    <span class="text-xs mt-2 text-gray-400 font-light">TikTok</span>
                 </a>
             </div>
             <a href="#policies" class="inline-block bg-red-600 text-white px-10 py-4 rounded-full font-bold hover:bg-red-700 transition uppercase tracking-widest">อ่านนโยบายพรรค</a>
@@ -79,7 +77,7 @@
         <div class="max-w-6xl mx-auto mb-12 text-center">
             <div class="glass p-8 rounded-[2.5rem] border-2 border-red-600 inline-block w-full max-w-sm card-hover transition-all">
                 <div class="member-img-placeholder" style="width: 150px; height: 150px;">
-                    <img src="https://i.postimg.cc/hPW6nnK2/1000007900-removebg-preview.png" alt="นายปิยะพัฒน์ เมืองนาง">
+                    <img src="https://i.postimg.cc/sxSZqq02/mi-m-ch-x-338-20260206012653.png" alt="นายปิยะพัฒน์ เมืองนาง">
                 </div>
                 <h3 class="text-xl font-800">นายปิยะพัฒน์ เมืองนาง</h3>
                 <p class="text-red-500 font-bold uppercase tracking-widest text-xs mt-1">ประธาน</p>
@@ -89,21 +87,21 @@
         <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8 mb-20">
             <div class="glass p-6 rounded-[2rem] border border-red-500/50 text-center card-hover transition-all">
                 <div class="member-img-placeholder">
-                    <img src="https://i.postimg.cc/TP4N4Mk7/1000007901-removebg-preview.png" alt="นายธนกร ทิพย์เนตร">
+                    <img src="https://i.postimg.cc/rscr6Q6C/mi-m-ch-x-338-20260206014158.png" alt="นายธนกร ทิพย์เนตร">
                 </div>
                 <h3 class="text-lg font-800">นายธนกร ทิพย์เนตร</h3>
                 <p class="text-red-500 font-bold text-xs">รองประธานคนที่ 1</p>
             </div>
             <div class="glass p-6 rounded-[2rem] border border-white/20 text-center card-hover transition-all">
                 <div class="member-img-placeholder" style="border-color: #ffffff;">
-                    <img src="https://i.postimg.cc/SxQZQN3c/1000007906-removebg-preview.png" alt="นางสาวฉัตรตราภรณ์ ทุมวรรณ">
+                    <img src="https://i.postimg.cc/m2gPQcTF/mi-m-ch-x-338-20260206014243.png" alt="นางสาวฉัตรตราพร ทุมวรรณ">
                 </div>
-                <h3 class="text-lg font-800">นางสาวฉัตรตราภรณ์ ทุมวรรณ</h3>
+                <h3 class="text-lg font-800">นางสาวฉัตรตราพร ทุมวรรณ</h3>
                 <p class="text-gray-400 font-bold text-xs uppercase">เลขานุการ</p>
             </div>
             <div class="glass p-6 rounded-[2rem] border border-red-500/50 text-center card-hover transition-all">
                 <div class="member-img-placeholder">
-                    <img src="https://i.postimg.cc/cCQDCKdh/1000007902-removebg-preview.png" alt="นางสาวสิริวิมล เวฬวนารักษ์">
+                    <img src="https://i.postimg.cc/N0HY6tyY/mi-m-ch-x-338-20260206013228.png" alt="นางสาวสิริวิมล เวฬวนารักษ์">
                 </div>
                 <h3 class="text-lg font-800">นางสาวสิริวิมล เวฬวนารักษ์</h3>
                 <p class="text-red-500 font-bold text-xs">รองประธานคนที่ 2</p>
@@ -117,34 +115,20 @@
         <div class="max-w-4xl mx-auto glass p-10 rounded-[3rem] border-2 border-red-600/30">
             <div class="text-center mb-10">
                 <h2 class="text-3xl font-800 uppercase tracking-widest text-white">แจ้งปัญหา & เสนอแนะ</h2>
-                <p class="text-red-500 mt-2">เสียงของทุกคนส่งตรงถึงประธานพรรค (Piyaphat.mueangnang17@gmail.com)</p>
             </div>
             <form action="https://formspree.io/f/mqakppon" method="POST" class="space-y-6">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
-                        <label class="block text-xs font-bold uppercase tracking-widest text-gray-400 mb-2">ชื่อ-นามสกุล (ไม่ระบุก็ได้)</label>
-                        <input type="text" name="name" class="w-full p-4 rounded-2xl glass border-none focus:ring-2 focus:ring-red-600" placeholder="ชื่อของคุณ">
+                        <input type="text" name="name" class="w-full p-4 rounded-2xl glass border-none" placeholder="ชื่อของคุณ">
                     </div>
                     <div>
-                        <label class="block text-xs font-bold uppercase tracking-widest text-gray-400 mb-2">ระดับชั้น</label>
-                        <input type="text" name="grade" class="w-full p-4 rounded-2xl glass border-none" placeholder="เช่น ม.4/1">
+                        <input type="text" name="grade" class="w-full p-4 rounded-2xl glass border-none" placeholder="ระดับชั้น">
                     </div>
                 </div>
                 <div>
-                    <label class="block text-xs font-bold uppercase tracking-widest text-gray-400 mb-2">หัวข้อที่ต้องการแจ้ง</label>
-                    <select name="subject" class="w-full p-4 rounded-2xl glass border-none text-gray-400 focus:text-white">
-                        <option value="แจ้งปัญหา">แจ้งปัญหาภายในโรงเรียน</option>
-                        <option value="เสนอแนะ">เสนอแนะนโยบายใหม่</option>
-                        <option value="ชื่นชม">ชื่นชม/ให้กำลังใจสภา</option>
-                        <option value="อื่นๆ">อื่นๆ</option>
-                    </select>
-                </div>
-                <div>
-                    <label class="block text-xs font-bold uppercase tracking-widest text-gray-400 mb-2">รายละเอียด</label>
                     <textarea name="message" rows="4" class="w-full p-4 rounded-2xl glass border-none" required placeholder="พิมพ์ข้อความของคุณที่นี่..."></textarea>
                 </div>
-                <input type="hidden" name="_replyto" value="Piyaphat.mueangnang17@gmail.com">
-                <button type="submit" class="w-full bg-red-600 text-white font-800 py-4 rounded-2xl hover:bg-red-700 transition-all uppercase tracking-widest shadow-lg shadow-red-600/20">ส่งข้อมูลถึงพรรคเบอร์ 3</button>
+                <button type="submit" class="w-full bg-red-600 text-white font-800 py-4 rounded-2xl hover:bg-red-700 transition-all uppercase tracking-widest">ส่งข้อมูลถึงพรรคเบอร์ 3</button>
             </form>
         </div>
     </section>
@@ -180,34 +164,37 @@
             {
                 name: "สภาวิชาการ", icon: "fa-book-open", head: "นางสาวชนาพร จักรนามน", 
                 head_img: "https://i.postimg.cc/T3v2LBfp/1000007881-removebg-preview.png",
-                members: [{n: "นางสาวจารุวรรณ เฉลิมสิงห์"}, {n: "นางสาวชรินรัตน์ ลุนอุบล", img: "https://i.postimg.cc/wMfpWbsF/1000007898-removebg-preview.png"}, {n: "นางสาวกมลพร กรมไทสงค์"}, {n: "นางสาววณิชพร ปุ้ยุ้ย"}, {n: "นางสาวพิไลวรรณ กองสำลี"}, {n: "นางสาวบุษราคัมย์ มลศิลป์"}]
+                members: [{n: "นางสาวจารุวรรณ เฉลิมสิงห์"}, {n: "นางสาวชรินรัตน์ ลุนอุบล", img: "https://i.postimg.cc/wMfpWbsF/1000007898-removebg-preview.png"}, {n: "นางสาวกมลพร กรมไทสงค์", img: "https://i.postimg.cc/9XLmxg8n/mi-m-ch-x-338-20260209011454.png"}, {n: "นางสาววณิชพร ปุ้ยุ้ย"}, {n: "นางสาวพิไลวรรณ กองสำลี"}, {n: "นางสาวบุษราคัมย์ มลศิลป์"}]
             },
             {
-                name: "สภาสารวัตร", icon: "fa-user-shield", head: "นายธีรพัฒน์ ศรีหานนท์", head_img: "",
+                name: "สภาสารวัตร", icon: "fa-user-shield", head: "นายธีรพัฒน์ ศรีหานนท์", 
+                head_img: "https://i.postimg.cc/2S5n9PSC/mi-m-ch-x-338-20260209003108.png",
                 members: [{n: "นายพชร บุญยานาม"}, {n: "นางสาววิจิตรา บัวระพา"}, {n: "นายธนวิทย์ กลับศรี"}, {n: "นายอาณาจักร นวลสำลี"}, {n: "นายขวัญชัย ดารา"}, {n: "นายอัศนัย กันหา"}, {n: "นายศุภกร หมื่นเดช"}]
             },
             {
                 name: "สภาประชาสัมพันธ์", icon: "fa-bullhorn", head: "นางสาวรุจิรา เหลื่อมนอก", 
                 head_img: "https://i.postimg.cc/V6XXRfqz/mi-m-ch-x-338-20260203131049.png",
-                members: [{n: "นางสาวอินทิรา พลหล"}, {n: "นางสาวกิตติปัญญา หอมหวล"}, {n: "นางสาวกรรณิการ์ คำมณีจันทร์", img: "https://i.postimg.cc/Gt0Y4q2b/1000007890-removebg-preview.png"}, {n: "นางสาวภัทราพร สิมารักษ์"}, {n: "นางสาวพิยดา แก้วภูเม็ง"}, {n: "นายสัตยา แสนภักดี"}, {n: "นางสาวกุลสตรี จันทร์หวังทอง"}]
+                members: [{n: "นางสาวอินทิรา พลหล", img: "https://i.postimg.cc/YCqyd8P9/mi-m-ch-x-338-20260209182818.png"}, {n: "นางสาวกิตติปัญญา หอมหวล"}, {n: "นางสาวกรรณิการ์ คำมณีจันทร์", img: "https://i.postimg.cc/KYzQL1M7/mi-m-ch-x-338-20260209002745.png"}, {n: "นางสาวภัทราพร สิมารักษ์", img: "https://i.postimg.cc/htF7g8ND/mi-m-ch-x-338-20260209005445.png"}, {n: "นางสาวพิยดา แก้วภูเม็ง"}, {n: "นายสัตยา แสนภักดี"}, {n: "นางสาวกุลสตรี จันทร์หวังทอง"}]
             },
             {
-                name: "สภาโสตทัศน์", icon: "fa-camera-retro", head: "นางสาววิไลลักษณ์ ถุงแก้ว", head_img: "",
+                name: "สภาโสตทัศน์", icon: "fa-camera-retro", head: "นางสาววิไลลักษณ์ ถุงแก้ว", 
+                head_img: "https://i.postimg.cc/MHNfn1TD/mi-m-ch-x-338-20260209004243.png",
                 members: [
                     {n: "นายธีรศิลป์ คัณทักษ์", img: "https://i.postimg.cc/HsyXCG6H/1000002246-removebg-preview.png"}, 
-                    {n: "นางสาวสุดารัตน์ ลวดอุปโป"}, {n: "นางสาวดวงพร เคนตานนท์"}, {n: "นางสาวปนัดดา บุตรแก้ว"}, {n: "นางสาวศิริพร หีบแก้ว"}, {n: "นางสาวปวริศา โคตรภักดี"}, {n: "นางสาวรวิษฎา จารัตน์"}
+                    {n: "นางสาวจิณณพัต อาจจันดา", img: "https://i.postimg.cc/668WmLkJ/mi-m-ch-x-338-20260209082940.png"},
+                    {n: "นางสาวสุดารัตน์ ลวดอุปโป"}, {n: "นางสาวดวงพร เคนตานนท์"}, {n: "นางสาวปนัดดา บุตรแก้ว"}, {n: "นางสาวศิริพร หีบแก้ว"}, {n: "นางสาวปวริศา โคตรภักดี"}, {n: "นางสาววริษฐา จารัตน์"}
                 ]
             },
             {
                 name: "สภาบริหารทั่วไป", icon: "fa-gears", head: "นางสาวคณาทรัพย์ โพชะ", head_img: "",
-                members: [{n: "นางสาวภาวินี ชารี"}, {n: "นางสาวปภัสรา โพธิ์พินิจ"}, {n: "นางสาวณิชาภรณ์ ศรีสุทธะ"}, {n: "นางสาวเบญญาภา ท้าวพา"}, {n: "นางสาวสุดารัตน์ บุทอง"}]
+                members: [{n: "นางสาวภาวินี ชารี"}, {n: "นางสาวปภัสรา โพธิ์พินิจ"}, {n: "นางสาวณิชาภรณ์ ศรีสุทธะ"}, {n: "นางสาวเบญญาภา ท้าวพา"}, {n: "นางสาวสุดารัตน์ บูทอง"}]
             },
             {
                 name: "สภากิจกรรม", icon: "fa-star", head: "นายอภิวัฒน์ ชินมาตร์", 
-                head_img: "https://i.postimg.cc/vB5TNMQt/1000007894-removebg-preview.png",
+                head_img: "https://i.postimg.cc/qq5TKWZP/mi-m-ch-x-338-20260205083046.png",
                 members: [
                     {n: "นายธนากร ศรีสะอาด"}, {n: "นางสาวณัฐพัชร์ เลิศศิลป์ชาญชัย", img: "https://i.postimg.cc/GmNp399R/1000007896-removebg-preview.png"}, 
-                    {n: "นางสาวพิชญาภา ศรีทอนสุด", img: "https://i.postimg.cc/5Ng1yy7P/1000007887-removebg-preview.png"}, 
+                    {n: "นางสาวพิชญาภา ศรีทอนสุด", img: "https://i.postimg.cc/0QhnJf07/mi-m-ch-x-338-20260205081552.png"}, 
                     {n: "นางสาวชลธิชา วันดา"}, {n: "นางสาวดวงจันทร์ บุญประคม"}, {n: "นางสาวบุปผาสิริ พรประเสริฐรักษา"}, 
                     {n: "นางสาวชัญญานุช เพชรหงษ์"}, 
                     {n: "นางสาวภัทรานิษย์ ชาวกล้า", img: "https://i.postimg.cc/ZRW0F3gR/1000007883-removebg-preview.png"}
@@ -215,26 +202,25 @@
             },
             {
                 name: "สภาอาคาร/สถานที่", icon: "fa-building", head: "นางสาวณัฐชยาภรณ์ ชารีแสง", head_img: "",
-                members: [{n: "นางสาวปวรินทร์ ทุมวัน"}, {n: "นางสาวรุ่งฤดี เวทไธสง"}, {n: "นายภัทรศกร อุดมกอง"}, {n: "นายทินกร กุลาสา"}, {n: "นางสาวอริสา แก้วเคล็ดคำ"}, {n: "นางสาวญานิศา มอบโคตร"}]
+                members: [{n: "นางสาวปภาวรินท์ ทุมวัน", img: "https://i.postimg.cc/BnGV2453/mi-m-ch-x-338-20260209005709.png"}, {n: "นางสาวรุ่งฤดี เวทไธสง", img: "https://i.postimg.cc/9FyxmK6J/mi-m-ch-x-338-20260209010419.png"}, {n: "นายภัทรศกร อุดมกอง"}, {n: "นายทินกร กุลาสา"}, {n: "นางสาวอริสา แก้วเคล็ดคำ"}, {n: "นางสาวญานิศา มอบโคตร"}]
             },
             {
                 name: "สภาปฏิคม", icon: "fa-handshake", head: "นางสาวสุนันทา พลยุทธ", 
-                head_img: "https://i.postimg.cc/Hs9WMBxy/1000007885-removebg-preview.png",
-                members: [{n: "นางสาวนันทพร ทวงษ์ศรี"}, {n: "นางสาวจีรชญา สุโพธิ์"}, {n: "นางสาวฟิณณิตา ทศชา"}, {n: "นางสาวนารีรัตน์ รักษาภักดี"}, {n: "นางสาวทอฝัน สุขรักษา"}, {n: "นางสาวอารีญา ศรีจันทร์", img: "https://i.postimg.cc/8cVJpcyq/1000007892-removebg-preview.png"}]
+                head_img: "https://i.postimg.cc/wBHkXMND/mi-m-ch-x-338-20260205080736.png",
+                members: [{n: "นางสาวนันทพร ทวงษ์ศรี", img: "https://i.postimg.cc/XYL6JpRm/mi-m-ch-x-338-20260209083258.png"}, {n: "นางสาวจีรชญา สุโพธิ์"}, {n: "นางสาวฟิณณิตา ทศชา"}, {n: "นางสาวนารีรัตน์ รักษาภักดี"}, {n: "นางสาวทอฝัน สุขรักษา"}, {n: "นางสาวอารยา ศรีจันทร์", img: "https://i.postimg.cc/8cVJpcyq/1000007892-removebg-preview.png"}]
             },
             {
-                name: "สภาเหรัญญิก", icon: "fa-wallet", head: "นางสาวธัญลักษณ์ อินพิมพ์", head_img: "",
-                members: [{n: "นางสาวกนกพร สิงห์ชัย"}, {n: "นางสาวอารีรัตน์ แสนหล้า"}, {n: "นางสาวจตุพร จันทะเทพ"}, {n: "นางสาวไอยดา วงษ์ศรีแก้ว"}, {n: "นางสาวสุจิตรา มีกุล"}]
+                name: "สภาเหรัญญิก", icon: "fa-wallet", head: "นางสาวธัญลักษณ์ อินพิมพ์", 
+                head_img: "https://i.postimg.cc/XYd00sLN/mi-m-ch-x-338-20260209082550.png",
+                members: [{n: "นางสาวกนกพร สิงห์ชาญ", img: "https://i.postimg.cc/fLXd7nj1/mi-m-ch-x-338-20260209010725.png"}, {n: "นางสาวอารีญา แสนหล้า", img: "https://i.postimg.cc/GpyHmxtj/mi-m-ch-x-338-20260205082428.png"}, {n: "นางสาวจตุพร จันทะเทพ"}, {n: "นางสาวไอยดา วงษ์ศรีแก้ว"}, {n: "นางสาวสุจิตรา มีกุล"}]
             }
         ];
 
-        // Render Policies
         const policyContainer = document.getElementById('policy-list');
         policies.forEach(p => {
-            policyContainer.innerHTML += `<div class="glass p-6 rounded-2xl card-hover transition-all text-left border-l-4 border-transparent hover:border-red-600"><p class="text-gray-300 font-light group-hover:text-white">${p}</p></div>`;
+            policyContainer.innerHTML += `<div class="glass p-6 rounded-2xl card-hover transition-all text-left border-l-4 border-transparent hover:border-red-600"><p class="text-gray-300 font-light">${p}</p></div>`;
         });
 
-        // Render Depts
         const deptGrid = document.getElementById('dept-grid');
         depts.forEach((dept, index) => {
             deptGrid.innerHTML += `<div class="glass p-8 rounded-3xl border-b-4 border-red-600 hover:bg-red-600/10 transition-all text-center group cursor-pointer" onclick="openModal(${index})"><i class="fa-solid ${dept.icon} text-3xl text-red-500 mb-4 group-hover:scale-110 transition-transform"></i><h3 class="text-lg font-bold">${dept.name}</h3><p class="text-xs text-gray-400 mt-2 italic">ดูรายชื่อสมาชิกฝ่าย</p></div>`;
