--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         const depts = [
             {
                 name: "สภาวิชาการ", icon: "fa-book-open", head: "นางสาวชนาพร จักรนามน", 
-                head_img: "https://i.postimg.cc/T3v2LBfp/1000007881-removebg-preview.png",
-                members: [{n: "นางสาวจารุวรรณ เฉลิมสิงห์"}, {n: "นางสาวชรินรัตน์ ลุนอุบล", img: "https://i.postimg.cc/wMfpWbsF/1000007898-removebg-preview.png"}, {n: "นางสาวกมลพร กรมไทสงค์", img: "https://i.postimg.cc/9XLmxg8n/mi-m-ch-x-338-20260209011454.png"}, {n: "นางสาววณิชพร ปุ้ยุ้ย"}, {n: "นางสาวพิไลวรรณ กองสำลี"}, {n: "นางสาวบุษราคัมย์ มลศิลป์"}]
+                head_img: "https://i.postimg.cc/1tKnzdnc/mi-m-ch-x-338-20260209214026.png",
+                members: [{n: "นางสาวจารุวรรณ เฉลิมสิงห์"}, {n: "นางสาวชรินรัตน์ ลุนอุบล", img: "https://i.postimg.cc/wMfpWbsF/1000007898-removebg-preview.png"}, {n: "นางสาวกมลพร กรมไทสง", img: "https://i.postimg.cc/9XLmxg8n/mi-m-ch-x-338-20260209011454.png"}, {n: "นางสาววณิชพร ปุ้ยุ้ย"}, {n: "นางสาวพิไลวรรณ กองสำลี"}, {n: "นางสาวบุษราคัมย์ มลศิลป์"}]
             },
             {
                 name: "สภาสารวัตร", icon: "fa-user-shield", head: "นายธีรพัฒน์ ศรีหานนท์", 
@@ -181,7 +181,7 @@
             {
                 name: "สภาบริหารทั่วไป", icon: "fa-gears", head: "นางสาวคณาทรัพย์ โพชะ", 
                 head_img: "https://i.postimg.cc/J7PtBzjJ/mi-m-ch-x-338-20260209193225.png",
-                members: [{n: "นางสาวภาวินี ชารี"}, {n: "นางสาวปภัสรา โพธิ์พินิจ"}, {n: "นางสาวณิชาภรณ์ ศีสุทธะ"}, {n: "นางสาวเบญญาภา ท้าวพา"}, {n: "นางสาวสุดารัตน์ บูทอง"}]
+                members: [{n: "นางสาวภาวินี ชารี"}, {n: "นางสาวปภัสรา โพธิ์พินิจ"}, {n: "นางสาวณิชาภรณ์ ศีสุทธะ"}, {n: "นางสาวเบญญาภา ท้าวพา"}, {n: "นางสาวสุดารัตน์ บุทอง"}]
             },
             {
                 name: "สภากิจกรรม", icon: "fa-star", head: "นายอภิวัฒน์ ชินมาตร์", 
